force-app/main/default/objects/B_Product__c.object
<CustomObject>
    <fields>
        <fullName>Available_Stock__c</fullName>
        <label>Available Stock</label>
        <precision>5</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>B_Discount__c</fullName>
        <label>Discount</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <label>Price</label>
        <precision>8</precision>
        <required>true</required>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Product_Name__c</fullName>
        <label>Product Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Selling_Price__c</fullName>
        <description>Calculates the selling price by subtracting the discount amount from MRP.</description>
        <formula>Price__c - ( Price__c *  (B_Discount__c / 100))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Calculates the selling price by subtracting the discount amount from MRP.</inlineHelpText>
        <label>Selling Price</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <label>B_Product</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>BPID-{00000}</displayFormat>
        <label>Product ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>B_Products</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>